[project]
name = "surveyhub-mcp"
version = "1.17.0"
description = "SurveyHub-MCP FastMCP server for FOFA, Quake, Hunter, ZoomEye, and DayDayMap cyberspace mapping platforms"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "helGayhub233" }
]
keywords = ["mcp", "fofa", "quake", "hunter", "zoomeye", "daydaymap", "cyberspace", "security", "osint"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.28.1",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/helGayhub233/SurveyHub-MCP"
Repository = "https://github.com/helGayhub233/SurveyHub-MCP"
Issues = "https://github.com/helGayhub233/SurveyHub-MCP/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/surveyhub_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"docs" = "surveyhub_mcp/docs"

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/.env.example",
    "/mcp.json.example",
    "/src",
    "/docs",
]
exclude = [
    "/.gitignore",
    "/.python-version",
    "/uv.lock",
]

[tool.uv]
package = true

[project.scripts]
surveyhub-mcp = "surveyhub_mcp.server:main"
fofa-mcp = "surveyhub_mcp.fofa:main"
quake-mcp = "surveyhub_mcp.quake:main"
hunter-personal-mcp = "surveyhub_mcp.hunter_personal:main"
hunter-enterprise-mcp = "surveyhub_mcp.hunter_enterprise:main"
zoomeye-mcp = "surveyhub_mcp.zoomeye:main"
daydaymap-mcp = "surveyhub_mcp.daydaymap:main"
